[package]
name = "staff"
version = "0.10.0"
edition = "2021"
license = "MIT"
description = "Music theory library with midi, notes, chords, scales, and more"
repository = "https://github.com/staff-rs/staff"
homepage = "https://staff-rs.github.io"

[features]
std = []
fretboard = ["std"]
parse = ["std"]
render = ["std"]
serde = ["dep:serde"]
ui = ["concoct"]
full = ["fretboard", "parse", "render", "serde", "ui"]
default = ["full"]

[lib]
name = "staff"

[[bin]]
name = "staff"
required-features = ["ui"]

[[example]]
name = "synth"
required-features = ["synth"]

[dependencies]
num-traits = "0.2.14"
concoct = { version = "0.6.8", path = "../concoct", features = ["web"], optional = true }
console_error_panic_hook = "0.1.7"

[dependencies.serde]
version = "1.0"
features = ["derive"]
optional = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
