[package]
name = "staff"
version = "0.10.0"
edition = "2021"
license = "MIT"
description = "Music theory library with midi, notes, chords, scales, and more"
repository = "https://github.com/staff-rs/staff"
homepage = "https://staff-rs.github.io"

[features]
std = []
fretboard = ["std"]
parse = ["std"]
render = ["std"]
serde = ["dep:serde"]
ui = ["dep:bumpalo", "dep:dioxus", "dep:dioxus-web", "dep:dioxus-signals", "dep:dioxus-resize-observer", "dep:dioxus-use-mounted"]
full = ["fretboard", "parse", "render", "serde", "ui"]
default = ["full"]

[lib]
name = "staff"

[[bin]]
name = "staff"
required-features = ["ui"]

[[example]]
name = "synth"
required-features = ["synth"]

[dependencies]
num-traits = "0.2.14"
console_error_panic_hook = "0.1.7"
dioxus = { git = "https://github.com/dioxuslabs/dioxus", optional = true }
dioxus-signals = { git = "https://github.com/dioxuslabs/dioxus", optional = true }
dioxus-web = { git = "https://github.com/dioxuslabs/dioxus", optional = true }
dioxus-resize-observer = { git = "https://github.com/dioxus-community/dioxus-resize-observer", optional = true }
dioxus-use-mounted= { git = "https://github.com/matthunz/dioxus-use-mounted", optional = true }
bumpalo = { version = "3.14.0", features = ["boxed"], optional = true }

[dependencies.serde]
version = "1.0"
features = ["derive"]
optional = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
